# dejavu

./: .gitignore  README.md  pyproject.toml
api/: pyproject.toml
backend/: pyproject.toml
backend/api/: main.py  models.py
backend/app/: database.py  main.py  models.py  schemas.py  trash.py  user.py
backend/database/: connections.py  db_init.py  schemas.py  setup_queries.py
backend/scripts/: schemas.py
backend/tests/: conftest.py  test_trash_api.py  test_user_api.py
database/: schemas.py
scripts/: db_init.py  schemas.py
