[tool.poetry]
name = "trashman"
version = "0.1.0"
description = ""
authors = ["takacs <davidetkcs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
appdirs = "^1.4.4"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
